Adding legend and styling

--- a/DVScatteplot/style.css
+++ b/DVScatteplot/style.css
@@ -1,3 +1,40 @@
 body {
     text-align: center;
 }
+
+.axis-label {
+    font-size: 1.5rem;
+}
+
+circle {
+    border: 1px solid black;   
+}
+
+.domain {
+    stroke-width: 2px;
+}
+
+.tick {
+    font-size: 0.8rem;
+}
+
+.tick > line {
+    stroke-width: 2px;
+}
+
+#tooltip {
+    background-color: lavender;
+    border-radius: 10px;
+    padding-top: -20px;
+}
+
+.tooltipInfo {
+    text-align: left;
+    padding: 0 10px 0 10px;
+}
+
+#legend {
+    background-color: lavender;
+    border-radius: 10px;
+    padding-top: -20px;
+}
