--- a/DVScatteplot/style.css
+++ b/DVScatteplot/style.css
@@ -2,6 +2,15 @@ body {
     text-align: center;
 }
 
+.homeBtn {
+    padding-top: 20px;
+}
+
+.homeBtn > a {
+    color: black;
+    text-decoration: none;
+}
+
 .axis-label {
     font-size: 1.5rem;
 }
