--- a/DVBarChart/style.css
+++ b/DVBarChart/style.css
@@ -8,12 +8,23 @@ body {
     text-align: center;
 }
 
+.homeBtn {
+    padding-top: 20px;
+}
+
+.homeBtn > a {
+    color: black;
+    text-decoration: none;
+}
+
+
 h1 {
     text-align: center;
     font-family: "Instrument Serif", serif;
     letter-spacing: .3rem;
     font-size: 3rem;
     transform: scale(1, .8);
+    margin-top: -10px;
 }
 
 #tooltip {
