--- a/HeatMap/style.css
+++ b/HeatMap/style.css
@@ -6,7 +6,15 @@ body {
     padding-top: 20px;
 }
 
-.homeBtn > a {
+.homeBtn>a {
     color: black;
     text-decoration: none;
+}
+
+.axis-label {
+    font-size: 1.5rem;
+}
+
+.bar {
+    fill: rgba(70, 130, 180, 0.5);
 }
