--- a/HeatMap/style.css
+++ b/HeatMap/style.css
@@ -18,3 +18,11 @@ body {
 .bar {
     fill: rgba(70, 130, 180, 0.5);
 }
+
+
+#tooltip {
+    background-color: rgba(0, 0, 0, 0.75);
+    color: white;
+    padding: 10px 20px 10px 20px;
+    border-radius: 10px;
+}
