--- a/ChoroplethMap/style.css
+++ b/ChoroplethMap/style.css
@@ -1,9 +1,12 @@
 body {
     text-align: center;
+    background-color: rgb(104, 112, 109);
+    zoom: 1.1;
 }
 
 .homeBtn {
-    padding-top: 20px;
+    padding-top: 10px;
+    padding-bottom: 0px;
 }
 
 .homeBtn>a {
@@ -11,18 +14,44 @@ body {
     text-decoration: none;
 }
 
-.axis-label {
-    font-size: 1.5rem;
+h1 {
+    line-height: 0%;
+    font-size: 2.5rem;
 }
 
-.bar {
-    fill: rgba(70, 130, 180, 0.5);
+h3 {
+    font-size: 1rem;
+    font-style: italic;
 }
 
+
+svg {
+    padding-bottom: 60px;
+    text-align: center;
+}
+
+.county {
+    stroke: white;
+    stroke-width: 0.01%;
+    fill: none;
+}
+
+.states {
+    stroke: white;
+    stroke-width: 0.1%;
+    fill: none;
+}
 
 #tooltip {
-    background-color: rgba(0, 0, 0, 0.75);
-    color: white;
-    padding: 10px 20px 10px 20px;
+    background-color: rgba(255, 255, 255, 0.75);
+    padding: 5px 10px 5px 10px;
     border-radius: 10px;
+}
+
+.tick>text {
+    font-size: 1rem;
+}
+
+.domain {
+    display: none;
 }
